# check_for_swf_in_file_list

./: cli.py  print_out_good_domains.py  pyproject.toml
check_for_swf_in_file_list/: app.py  constants.py  main.py  model.py  utils.py
